js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentModuleWithCrossModuleInliner/lib1/l1a.4.kt
fun qux1() = 42 + foo() * 8
